GX: Added Portals and Third Person Character. Set Third Person Game Mode Active.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -14,4 +14,5 @@ r.AllowGlobalClipPlane=True
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Levels/Level1.Level1
 GameDefaultMap=/Game/Levels/Level1.Level1
+GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode_C
 
